# HumbleNet

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  NOTICES.md  README.chromium.md  README.md  WEBRTC_CHROMIUM_ROADMAP.md  WEBRTC_MIGRATION_PLAN.md  WEBRTC_NATIVE_LINUX_CHECKLIST.md  WEBRTC_NATIVE_LINUX_DESIGN.md  js-dos.md
.github/workflows/: humblenet-boringssl-linux.yml  humblenet-linux.yml  humblenet-openssl-linux.yml  humblenet-release.yml
cmake/: BoilerPlate.cmake  UtilityFunctions.cmake
coturn-docker/: .dockerignore  .env.example  Dockerfile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  init.sh  renew-certs.sh  turnserver.conf.template
coturn-docker/nginx/: default.conf.template  ping.html
jsapi/: CMakeLists.txt
jsapi/src/: main.cpp
scripts/: deploy.sh
src/api_builder/: CMakeLists.txt  builder.cpp
src/humblenet/: CMakeLists.txt  HumbleNet_API.json  humblenet_api.cs
src/humblenet/humblepeer/: humblepeer.cpp  humblepeer.fbs  humblepeer.h
src/humblenet/include/: humblenet.h  humblenet_p2p.h  humblenet_socket.h
src/humblenet/loader/: loader.cpp
src/humblenet/src/: humblenet_alias.cpp  humblenet_alias.h  humblenet_core.cpp  humblenet_datagram.cpp  humblenet_p2p.cpp  humblenet_p2p_internal.h  humblenet_p2p_signaling.cpp  libpoll.cpp  libsocket.cpp  libsocket.h  libwebrtc.cpp  libwebrtc.h  libwebrtc_asmjs.cpp  libwebrtc_dynamic.cpp  libwebsockets_asmjs.cpp  libwebsockets_asmjs.h  libwebsockets_native.cpp  libwebsockets_native.h
src/humblenet/webrtc/: exported_linux.map  exported_osx.map  exported_win.def  webrtc_native.cpp  webrtc_native_linux.cpp
src/peer-server/: CMakeLists.txt  catalog.cpp  catalog.h  db.cpp  db.h  game.cpp  game.h  logging.cpp  logging.h  p2p_connection.cpp  p2p_connection.h  peer-server-lws-plugins.c  peer-server.cpp  peer-server.sh  server.cpp  server.h
tests/: CMakeLists.txt  hello_world.cpp  test_loader.cpp  test_peer.cpp  test_webrtc.cpp
tests/c-sharp/TestPeer/: TestPeer.cs
webrtcnet/: CMakeLists.txt
